bug fix on register
